add GroupSoldProductsByTheDate.sql